test: integration tests for DrinkController